--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,4 +21,10 @@
         <item name="cornerSize">50%</item>
     </style>
 
+
+    <style name="MyRadioButton" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/DarkGray</item>
+        <item name="colorControlActivated">@color/DarkGray</item>
+    </style>
+
 </resources>
