--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -9,66 +9,56 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login to app"
-        android:textColor="@color/DarkGray"
-        android:textStyle="bold"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="100dp"
+        android:text="Come in"
         android:textSize="36sp"
-        android:layout_gravity="top|center"
-        android:layout_marginTop="150dp"/>
+        android:textColor="@color/DarkGray"
+        android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/inputUserName2"
+        android:id="@+id/input_email2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="username"
-        android:textAlignment="center"
+        android:layout_height="30dp"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="200dp"
         android:background="@drawable/custom_edit_text"
-        android:paddingVertical="3dp"
-        android:layout_gravity="top|center"
-        android:layout_marginTop="280dp"/>
+        android:ems="10"
+        android:hint="email"
+        android:inputType="textEmailAddress"
+        android:textAlignment="center" />
 
     <EditText
-        android:id="@+id/inputPassword2"
+        android:id="@+id/input_pass2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="250dp"
+        android:textAlignment="center"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="password"
-        android:textAlignment="center"
         android:background="@drawable/custom_edit_text"
-        android:paddingVertical="3dp"
-        android:layout_gravity="top|center"
-        android:layout_marginTop="315dp"/>
+        android:hint="password"/>
 
     <Button
         android:id="@+id/signInBtn2"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:text="Sign In"
-        android:background="@drawable/custom_button_from_pofile"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
+        android:layout_height="wrap_content"
         android:layout_gravity="top|center"
-        android:layout_marginTop="400dp" />
+        android:layout_marginTop="350dp"
+        android:background="@drawable/custom_button_from_pofile"
+        android:text="Sign In"
+        android:textColor="@color/white"
+        android:textAllCaps="false"/>
 
     <TextView
         android:id="@+id/signUpBtn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textColor="@color/DarkGray"
         android:layout_gravity="bottom|center"
-        android:layout_marginBottom="20dp"/>
+        android:layout_marginBottom="25dp"
+        android:textSize="18sp"
+        android:text="Sign Up" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Учи английский с нами"
-        android:textSize="24sp"
-        android:textColor="@color/DarkGray"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="60dp"/>
 
 </FrameLayout>
