Update 3.1 Add polls

--- a/app/src/main/res/menu/list_menu_bottom.xml
+++ b/app/src/main/res/menu/list_menu_bottom.xml
@@ -12,6 +12,11 @@
         android:icon="@drawable/ic_tests"/>
 
     <item
+        android:id="@+id/polls"
+        android:title="Polls"
+        android:icon="@drawable/ic_poll"/>
+
+    <item
         android:id="@+id/profile"
         android:title="@string/profile"
         android:icon="@drawable/ic_profile"/>
