--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />
 
     <androidx.cardview.widget.CardView
-        android:layout_width="80dp"
+        android:layout_width="300dp"
         android:layout_height="80dp"
         app:cardCornerRadius="10dp"
         android:layout_gravity="center|top"
@@ -50,7 +50,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Points"
+            android:text="LVL"
             android:textSize="16sp"
             android:textColor="@color/DarkGray"
             android:layout_gravity="center|top"
@@ -79,20 +79,7 @@
         android:layout_gravity="center|top"
         android:layout_marginTop="160dp"/>
 
-    <Button
-        android:id="@+id/settingsButton"
-        android:layout_width="350dp"
-        android:textAllCaps="false"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"
-        android:gravity="left|center_vertical"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="350dp"
-        android:background="@drawable/white_button"
-        android:textColor="@color/DarkGray"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:text="Settings" />
+
 
     <Button
         android:id="@+id/privacyButton"
