Update 4.1.1 Full and add save avatars

--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -58,7 +58,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="25dp"
+        android:textColor="@color/DarkGray"
         android:textSize="18sp"
+        android:textStyle="bold"
         android:text="Sign Up" />
 
 
