--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -71,6 +71,7 @@
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="25dp"
         android:textSize="18sp"
+        android:textStyle="bold"
         android:text="Sign In" />
 
     <TextView
